@@ -15,6 +15,10 @@ and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Version
 
 This section tracks upcoming changes that are not yet released.
 
+=== Changed
+
+* Modify Ansible role meta information
+
 === Fixed
 
 * Ensure Ansible meta files are interpreted as YAML files.
